<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaseDeAlumnos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mat">Matricula: </string>
    <string name="hint">121130248</string>
    <string name="nom">Nombre:</string>
    <string name="hint2">Eduardo Ocampo</string>
    <string name="dir">Dirección</string>
    <string name="hint3">Calle Falsa 123</string>
    <string name="tel">Telefono: </string>
    <string name="hint4">5564459711</string>
    <string name="alta">Alta</string>
    <string name="baja">Baja</string>
    <string name="con">Consulta</string>
    <string name="mod">Modificar</string>
</resources>
